# kynmix_core_win

./: .gitignore  CMakeLists.txt  README.md  peerify_core.slnx
peerify_core/: PeerifyAnalyzer.cpp  PeerifyAnalyzer.h  PeerifyAudio.cpp  PeerifyAudio.h  PeerifyBassEngine.cpp  PeerifyBassEngine.h  dll_main.cpp  json.hpp  peerify_core.vcxproj  peerify_core.vcxproj.filters  rebuild.bat
